# sandstorm

./: .gitignore  Cargo.toml  README.md  array-sum.cairo  array-sum.json  array-sum.proof  array-sum.proof.hex  array-sum.proof.json  array-sum.wasm.proof.hex  build.rs  constraints_diff  constraints_new  constraints_old  memory.bin.hex  memory.json  rust-toolchain.toml  trace.bin.hex  trace.json
binary/: Cargo.toml
binary/src/: errors.rs  lib.rs  pie.rs  utils.rs
builtins/: Cargo.toml
builtins/src/: lib.rs  utils.rs
builtins/src/bitwise/: mod.rs
builtins/src/ec_op/: mod.rs
builtins/src/ecdsa/: mod.rs  periodic.rs
builtins/src/pedersen/: constants.rs  mod.rs  periodic.rs
builtins/src/poseidon/: mod.rs  params.rs  periodic.rs
builtins/src/range_check/: mod.rs
claims/: Cargo.toml
claims/src/: lib.rs
claims/src/base/: mod.rs
claims/src/sharp/: channel.rs  hash.rs  input.rs  merkle.rs  mod.rs  prover.rs  random.rs  utils.rs  verifier.rs
claims/src/sharp/cairo/: hash.rs  mod.rs  random.rs
claims/src/sharp/solidity/: hash.rs  mod.rs  random.rs
claims/src/sharp_to_cairo/: hash.rs  input.rs  merkle.rs  mod.rs  prover.rs  random.rs  utils.rs  verifier.rs
claims/src/sharp_to_cairo/test/: air-public-input.json
claims/src/sharp_to_solidity/: hash.rs  input.rs  merkle.rs  mod.rs  random.rs  utils.rs  verifier.rs
cli/: Cargo.toml
cli/src/: main.rs
codegen/: cargo.toml
codegen/src/: lib.rs
crypto/: Cargo.toml
crypto/benches/: public_coin.rs
crypto/src/: lib.rs  utils.rs
crypto/src/hash/: blake2s.rs  keccak.rs  mod.rs  pedersen.rs  poseidon.rs
crypto/src/merkle/: mixed.rs  mod.rs  utils.rs
crypto/src/public_coin/: cairo.rs  mod.rs  solidity.rs
example/: air-input.json  air-private-input.json  air-public-input.json  array-sum.cairo  array-sum.json  array-sum.proof.saved  gen_poly.py  test.py
example/bootloader/: air-private-input.json  air-public-input.json  bootloader_compiled.json
example/output/: air-private-input.json  air-public-input.json  main.cairo  main_compiled.json
example/pedersen/: air-private-input-OLD.json  air-private-input.json  air-public-input.json  main.cairo  main_compiled.json
examples/: test.rs
layouts/: Cargo.toml  README.md
layouts/src/: layout6.rs  lib.rs  utils.rs
layouts/src/layout6/: air.rs  mod.rs  trace.rs
layouts/src/layout6/pedersen/: mod.rs  params.rs
layouts/src/plain/: air.rs  mod.rs  trace.rs
layouts/src/recursive/: air.rs  mod.rs  trace.rs
layouts/src/starknet/: air.rs  mod.rs  trace.rs
scripts/: bin2hex.py  gen.sh  hex2bin.py  verify.sh
sharp/: Cargo.toml
sharp/src/: channel.rs  lib.rs  prover.rs  utils.rs  verifier.rs
src/: air.rs  binary.rs  claims.rs  input.rs  lib.rs  main.rs  prover.rs  trace.rs  utils.rs
src/public_coin/: cairo.rs  mod.rs  solidity.rs
