[package]
name = "sandstorm"
description = "SHARP compatible Cairo prover"
authors = ["Andrew Milson <andrew.j.milson@gmail.com>"]
version = "0.1.0"
edition = "2021"

[workspace]
members = ["layouts", "binary", "builtins", "crypto", "cli"]

[features]
default = [ ]
asm = [ "ministark/asm", "crypto/asm" ]
gpu = [ "ministark/gpu" ]
parallel = [
    "dep:rayon",
    "ark-std/parallel",
    "ark-ff/parallel",
    "ark-poly/parallel",
    "ministark/parallel",
    "ministark-gpu/parallel",
    "crypto/parallel",
    "layouts/parallel"
]

[dependencies]
ark-ff = "0.4"
ark-std = "0.4"
layouts = { path = "./layouts", package = "sandstorm-layouts" }
crypto = { path = "./crypto", package = "sandstorm-crypto" }
builtins = { path = "./builtins", package = "sandstorm-builtins" }
binary = { path = "./binary", package = "sandstorm-binary" }
ministark-gpu = { version = "0.1", path = "../ministark-mirror/gpu" }
ministark = { path = "../ministark-mirror" }
ruint = { version = "1.7", features = [ "serde", "num-bigint" ] }
sha2 = "0.10"
sha3 = "0.10"
blake2 = "0.10"
rand = "0.8"
num-bigint = "0.4"
ark-serialize = "0.4"
ark-poly = "0.4"
digest = "0.10"
rayon = { version = "1.5", optional = true }

[dev-dependencies]
serde_json = "1.0"

# taken from https://github.com/recmo/uint
# Compilation profile for any non-workspace member.
# Dependencies are optimized, even in a dev build. This improves dev performance
# while having neglible impact on incremental build times.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 8
lto = false

[profile.bench]
codegen-units = 1
lto = true
