[package]
name = "sandstorm"
description = "SHARP compatible Cairo prover"
authors = ["Andrew Milson <andrew.j.milson@gmail.com>"]
version = "0.2.0"
edition = "2021"

[workspace]
members = ["layouts", "binary", "builtins", "crypto", "cli"]

[features]
default = []
asm = ["ministark/asm", "crypto/asm"]
gpu = ["ministark/gpu"]
parallel = [
    "dep:rayon",
    "ark-std/parallel",
    "ark-ff/parallel",
    "ark-poly/parallel",
    "ministark/parallel",
    "ministark-gpu/parallel",
    "crypto/parallel",
    "layouts/parallel",
]

[dependencies]
ark-ff = "0.4.2"
ark-std = "0.4.0"
layouts = { path = "./layouts", package = "sandstorm-layouts" }
crypto = { path = "./crypto", package = "sandstorm-crypto" }
builtins = { path = "./builtins", package = "sandstorm-builtins" }
binary = { path = "./binary", package = "sandstorm-binary" }
ministark-gpu = { git = "https://github.com/andrewmilson/ministark" }
ministark = { git = "https://github.com/andrewmilson/ministark" }
ruint = { version = "1.12.0", features = ["serde", "num-bigint"] }
sha2 = "0.10.8"
sha3 = "0.10.8"
blake2 = "0.10.6"
rand = "0.8.5"
num-bigint = "0.4.4"
ark-serialize = "0.4.2"
ark-poly = "0.4.2"
digest = "0.10.7"
rayon = { version = "1.9.0", optional = true }

[dev-dependencies]
serde_json = "1.0.114"

# taken from https://github.com/recmo/uint
# Compilation profile for any non-workspace member.
# Dependencies are optimized, even in a dev build. This improves dev performance
# while having neglible impact on incremental build times.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true

[profile.bench]
codegen-units = 1
lto = true
