[package]
name = "sandstorm-binary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = "0.4"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = { version = "1.0", features = [ "arbitrary_precision" ] }
ruint = { version = "1.7", features = [ "serde", "num-bigint" ] }
num-bigint = { version = "0.4" }
ministark-gpu = { version = "0.1", path = "../../playground/ministark/gpu" }
ark-serialize = "0.4"
zip = "0.6"
bincode = "1.2"
digest = "0.10"

[dev-dependencies]
sha3 = "0.10"
