[package]
name = "sandstorm-binary"
version = "0.2.0"
edition = "2021"

[dependencies]
ark-ff = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
ruint = { version = "1.7", features = ["serde", "num-bigint"] }
num-bigint = { version = "0.4" }
ministark-gpu = { version = "0.3", git = "https://github.com/andrewmilson/ministark" }
ark-serialize = "0.4"
num-traits = "0.2"
ark-ec = "0.4"
bincode = "1.2"

[dev-dependencies]
sha3 = "0.10"
