[package]
name = "sandstorm-builtins"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = "0.4"
ark-ec = "0.4"
starknet-crypto = "0.6"
ministark-gpu = { version = "0.3", git = "https://github.com/andrewmilson/ministark" }
ministark = { git = "https://github.com/andrewmilson/ministark" }
ark-poly = "0.4"
num-bigint = "0.4"
ruint = { version = "1.7", features = ["serde", "num-bigint"] }
binary = { path = "../binary", package = "sandstorm-binary" }
