[package]
name = "sandstorm-claims"
version = "0.1.0"
edition = "2021"

[features]
parallel = [ "dep:rayon", "ark-std/parallel", "ministark/parallel", "ministark-gpu/parallel" ]


[dependencies]
ark-ff = "0.4"
ark-std = "0.4"
layouts = { path = "../layouts", package = "sandstorm-layouts" }
binary = { path = "../binary", package = "sandstorm-binary" }
ministark-gpu = { version = "0.1", path = "../../ministark-mirror/gpu" }
ministark = { path = "../../ministark-mirror" }
ruint = { version = "1.7", features = [ "serde", "num-bigint" ] }
sha2 = "0.10"
sha3 = "0.10"
rand = "0.8"
num-bigint = "0.4"
ark-serialize = "0.4"
ark-poly = "0.4"
digest = "0.10"
rayon = { version = "1.5", optional = true }
