[package]
name = "sandstorm-crypto"
version = "0.1.0"
edition = "2021"

[features]
asm = [ "blake2/simd_asm" ]
parallel = [ "dep:rayon", "ark-std/parallel", "ministark/parallel", "ministark-gpu/parallel" ]

[dependencies]
ark-ff = "0.4"
ark-std = "0.4"
binary = { path = "../binary", package = "sandstorm-binary" }
builtins = { path = "../builtins", package = "sandstorm-builtins" }
ministark-gpu = { version = "0.1", git = "https://github.com/andrewmilson/ministark" }
ministark = { git = "https://github.com/andrewmilson/ministark" }
ruint = { version = "1.7", features = [ "serde", "num-bigint" ] }
sha3 = "0.10"
blake2 = "0.10"
rand = "0.8"
num-bigint = "0.4"
ark-serialize = "0.4"
ark-poly = "0.4"
digest = "0.10"
rayon = { version = "1.5", optional = true }

[dev-dependencies]
serde_json = "1.0"
criterion = "0.5.1"

[[bench]]
name = "public_coin"
harness = false
