[package]
name = "sandstorm-layouts"
version = "0.1.0"
edition = "2021"

[dependencies]
ministark-gpu = { version = "0.1", git = "https://github.com/andrewmilson/ministark" }
ministark = { git = "https://github.com/andrewmilson/ministark" }
binary = { path = "../binary", package = "sandstorm-binary" }
ark-poly = { git = "https://github.com/andrewmilson/algebra", branch = "vec-allocator" }
ark-serialize = "0.4"
num-traits = "0.2"
strum = "0.24"
ark-ff = "0.4"
num-bigint = "0.4"
ark-ec = "0.4"
ark-std = "0.4"
strum_macros = "0.24"