[package]
name = "sandstorm-layouts"
version = "0.1.0"
edition = "2021"

[features]
default = [ ]
# TODO: add parallel feature and fix issues
# parallel = [ "ark-std/parallel", "ministark/parallel", "ministark-gpu/parallel" ]

[dependencies]
ministark-gpu = { version = "0.1", path = "../../playground/ministark/gpu" }
ministark = { path = "../../playground/ministark" }
binary = { path = "../binary", package = "sandstorm-binary" }
builtins = { path = "../builtins", package = "sandstorm-builtins" }
ark-poly = "0.4"
ark-serialize = "0.4"
num-traits = "0.2"
strum = "0.24"
ark-ec = "0.4"
ark-ff = "0.4"
num-bigint = "0.4"
ark-std = "0.4"
ruint = { version = "1.7", features = [ "serde", "num-bigint" ] }
strum_macros = "0.24"